[package]
name = "misscan"
version = "0.1.0"
edition = "2021"
authors = ["hitalin"]
description = "Anti-spam and penetration testing toolkit for Misskey"
repository = "https://github.com/hitalin/misscan"
license = "MIT"
keywords = ["misskey", "security", "anti-spam", "penetration-testing"]
categories = ["command-line-utilities", "web-programming"]

[dependencies]
tokio = { version = "1.46", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
thiserror = "2.0"
log = "0.4"
env_logger = "0.11"
indicatif = { version = "0.18", features = ["tokio"] }
chrono = { version = "0.4", features = ["serde"] }
colored = "3.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
